Started basic client UI