@@ -16,6 +16,15 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'org.mindrot:jbcrypt:0.4'
+    implementation 'org.mongodb:mongodb-driver-sync:4.4.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.slf4j:slf4j-api:2.0.7'
+    implementation 'org.slf4j:slf4j-simple:2.0.7'
+
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--add-opens=java.base/java.time=ALL-UNNAMED'
 }
 
 test {
